--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/main.css">
-    <link rel="icon" type="image/png" href="/images/icon.svg"/>
+    <link rel="stylesheet" href="style/main.css">
+    <link rel="icon" type="image/png" href="images/icon.svg"/>
     <title>Contact form</title>
 </head>
 <body>
@@ -58,6 +58,6 @@
  
 
 
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
