--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div class="message" id="message">
             <div id="message-user">Hello, user with email </div>
-            <img src="/images/message.jpg">
+            <img src="images/message.jpg">
         </div>
 
         <form id="form">
